--- a/Database-Chatbot/Views/Questions/Create.cshtml
+++ b/Database-Chatbot/Views/Questions/Create.cshtml
@@ -10,9 +10,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="DatabaseId" value="ViewBag.DatabaseId" />
+            <input type="hidden" asp-for="DatabaseId" value="@ViewBag.DatabaseId" />
             <div class="form-group">
                 <label asp-for="QuestionText" class="control-label"></label>
                 <input asp-for="QuestionText" class="form-control" />
